2-k3s/19.ddns-updater/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ddns-updater
  namespace: ddns-updater
  labels:
    app: ddns-updater
spec:
  selector:
    app: ddns-updater
  ports:
    - name: http
      port: 80
      targetPort: 8000
