2-k3s/19.ddns-updater/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: lan-only
  namespace: ddns-updater
spec:
  ipAllowList:
    sourceRange:
      - 10.0.0.0/8
      - 172.16.0.0/12
      - 192.168.0.0/16
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ddns-updater
  namespace: ddns-updater
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`ddns.epaflix.com`)
      kind: Rule
      middlewares:
        - name: lan-only
      services:
        - name: ddns-updater
          port: 80
  tls:
    certResolver: cloudflare
    domains:
      - main: epaflix.com
        sans:
          - "*.epaflix.com"
